--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.10",
     "npm": "^6.13.1",
+    "nuka-carousel": "^4.5.13",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
