--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@primer/octicons-react": "^9.3.1",
     "bcrypt": "^3.0.7",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
